Added a new command to regionsfor protecting the entire map

--- a/Regions/Changes.txt
+++ b/Regions/Changes.txt
@@ -3,3 +3,4 @@
 	- Added On enter hook to clear selections
 	- Made sure only ops can use region select (during)
 	- Fixed a bug where it divided by 16...again
+	- A new command to protect the map
