Fixed Eater and bound NPC's to use a better SetDefaults method

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -14,3 +14,4 @@ Build: 37
 	- Snow!
 	- Few more Server Properties Options
 	- Language file + Generation Tool
+	- Minor method changes in Server.cs
