Something else i have forgotten...

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,10 +9,10 @@ Build: 37
 ===================
 	- Updated all NPC AI (38/38)
 	- Added Hardmode
-	- Added all 1.1/.2 NPC's
+	- Added all 1.1/.2 NPC's + invasions
 	- Added more hooks for new bosses/misc
 	- Snow!
 	- Few more Server Properties Options
 	- Language file + Generation Tool
-	- Minor method changes in Server.cs
+	- Minor method changes in Server.cs & upgrade to World.cs
 	- More commands.
