Organised some files & updated a few

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -14,5 +14,5 @@ Build: 37
 	- Snow!
 	- Few more Server Properties Options && Command Line Args
 	- Language file + Generation Tool
-	- Minor method changes in Server.cs & upgrade to World.cs
+	- Minor method changes in Server.cs & upgrade to World.cs + Other Misc API changes
 	- More commands.
