Changes I canot rememebr again.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,11 +8,13 @@ of what has happened between builds we need to keep this document up to date and
 Build: 37
 ===================
 	- Updated all NPC AI (38/38)
-	- Added Hardmode
+	- Added hardmode
 	- Added all 1.1/.2 NPC's + invasions
 	- Added more hooks for new bosses/misc
 	- Snow!
-	- Few more Server Properties Options && Command Line Args
-	- Language file + Generation Tool
-	- Minor method changes in Server.cs & upgrade to World.cs + Other Misc API changes
+	- Few more server properties options && command line arguments
+	- Language file + generation tool
+	- Minor method changes in Server.cs & upgrade to World.cs + other misc API changes
 	- More commands.
+	- Allowed spawning through statues and spawnnpc when summing is disabled (configurable)
+	- Code names.
