Permissions X now has a management command + updated releases for showcase

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -29,3 +29,4 @@ Build 38
 	- Time locking
 	- Backup manager - Automatic or command
 	- TDSM Permissions (Both) - Chat hook is now early for chat plugins to take over.
+	- Restrics Npc Permission node will now work.
