Renamed a few protocol things + fixed up NPC.IsNPCSummoned

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -32,3 +32,4 @@ Build 38
 	- Restrics Npc Permission node will now work.
 	- NPC Housing
 	- Item animations (Projectiles) not being reset on occasions.
+	- Work on the Wiki Protocol Documentation
