Forced NPC's to spawn within World Generation

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -40,3 +40,5 @@ Build 38
 	- Plugins can now tap into the language system. There now is also no check for out of date files as it's not needed anymore.
 	- Fixed world sizes - Large maps are now ~20mb
 	- Old API -> Better naming conventions.
+    - Fixed explosions
+    - More WorldGen configurable options.
