--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -40,5 +40,6 @@ Build 38
 	- Plugins can now tap into the language system. There now is also no check for out of date files as it's not needed anymore.
 	- Fixed world sizes - Large maps are now ~20mb
 	- Old API -> Better naming conventions.
-    - Fixed explosions
+    - Fixed explosions.
     - More WorldGen configurable options.
+	- Comments for property files.
