--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -46,7 +46,9 @@ Build 38
  
 Build 39
 ===================
-     - Added a Task Scheduler.
-     - Updated the Update Manager.
-     - Added a Task to check for updates.
-     - Corrected the reload command.
+     - Added a Task Scheduler
+     - Updated the Update Manager
+     - Added a Task to check for updates
+     - Corrected the /reload command
+     - Added plugin commands to /help
+     - Cleaned a few plugin descriptions [Language update may be required]
