--- a/Official/changelog.txt
+++ b/Official/changelog.txt
@@ -1,3 +1,11 @@
+Version 1.3.0.7 Changes-----------------------------------------------------------------------------------------------
+
+
+Changes:
+  Mac & Linux support.
+  Several internal changes were made to allow for the support of Mac and Linux.
+
+
 Version 1.3.0.6 Changes-----------------------------------------------------------------------------------------------
 
 
